# generals-io-ai

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml  docker-compose.yml
.github/workflows/: format-and-check.yaml
ai/bhintze-aim-for-cities/src/: main.rs
ai/custom/: Cargo.toml
ai/ijc-testing/src/: main.rs
ai/jroylance-closest-conquerable-space/src/: main.rs
ai/jroylance/src/: main.rs
game/: Cargo.toml
game/data/: index.js  styles.css
game/src/: ai.rs  game_state.rs  main.rs
model/src/: lib.rs
