[workspace]

resolver = "2"

members = [
    "game",
    "model",
    "ai/*",
]

[workspace.dependencies]
axum = "0.7.5"
futures = "0.3.3"
rand = "0.8.5"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
itertools = "0.13.0"
uuid = { version = "1.3.0", features = ["v4"] }